Add force fail step in lint job
Add a step to force a failure in the workflow.

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,6 +45,9 @@ jobs:
         run: |
           echo "Hello, Lint!"
           echo "Goodbye, Lint!"
+
+      - name: Force fail
+        run: exit 1
           
   test:
     name: Test!
