--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,60 +1,37 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    name: Build!
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Run actions!
-        uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script!
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script!
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-
-  lint:
-    name: Lint!
+  produce:
     runs-on: ubuntu-latest
     steps:
-      - name: Lint step
+      - name: 결과 파일 생성
         run: |
-          echo "Hello, Lint!"
-          echo "Goodbye, Lint!"
+          mkdir -p out
+          echo "Hello" > out/result.txt
 
-      - name: Force fail
-        run: exit 1
-          
-  test:
-    name: Test!
-    needs: lint
+      - name: 업로드
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-output
+          path: out/
+
+  
+  consume:
     runs-on: ubuntu-latest
+    needs: produce
     steps:
-      - name: Test step
-        run: |
-          echo "Hello, Test!"
-          echo "Goodbye, Test!"
+      - name: 다운로드
+        uses: actions/download-artifact@v4
+        with:
+          name: build-output
+          path: downloaded/
+
+      - name: 확인
+        run: cat downloaded/result.txt
